<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugador_uno"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugador_dos"
        android:id="@+id/textView2"
        android:layout_below="@+id/progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cero"
        android:id="@+id/textView3"
        android:width="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cero"
        android:id="@+id/textView4"
        android:width="50dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugador_uno"
        android:id="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView6" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugador_dos"
        android:id="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView6"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uno"
        android:id="@+id/control"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/textView6"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lanzar"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:onClick="lanzar_dado"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:layout_gravity="center"
            android:src="@drawable/dado1"
            android:visibility="invisible"
            android:labelFor="@string/dado"
            android:contentDescription="@string/dado1"

            android:layout_alignTop="@+id/imageView2"
            android:layout_alignLeft="@+id/imageView6"
            android:layout_alignStart="@+id/imageView6" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_gravity="center"
            android:src="@drawable/dado2"
            android:visibility="invisible"
            android:contentDescription="@string/dado2"

            android:layout_alignTop="@+id/imageView3"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_alignStart="@+id/imageView1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_gravity="center"
            android:src="@drawable/dado3"
            android:visibility="invisible"
            android:layout_alignTop="@+id/imageView4"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_alignStart="@+id/imageView1"
            android:contentDescription="@string/dado3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:layout_gravity="center"
            android:src="@drawable/dado4"
            android:contentDescription="@string/dado4"
            android:visibility="invisible"
            android:layout_alignTop="@+id/imageView5"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_alignStart="@+id/imageView1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:layout_gravity="center"
            android:src="@drawable/dado5"
            android:visibility="invisible"
            android:contentDescription="@string/dado5"
            android:layout_alignTop="@+id/imageView6"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_alignStart="@+id/imageView1" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:layout_gravity="center"
            android:src="@drawable/dado6"
            android:visibility="invisible"
            android:contentDescription="@string/dado6"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acumulado"
        android:id="@+id/textView6"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comenzar"
        android:id="@+id/button2"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:onClick="comenzar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cero"
        android:id="@+id/acumulado"
        android:layout_alignTop="@+id/textView6"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recoger"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:onClick="recoger"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3"
        android:max="100" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="100" />


</RelativeLayout>
